--- a/.github/workflows/building-action.yml
+++ b/.github/workflows/building-action.yml
@@ -12,8 +12,12 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+        
       - name: Format code
         run: npm run format
+
       - name: Building
         run: npm run build
   
