--- a/.github/workflows/building-action.yml
+++ b/.github/workflows/building-action.yml
@@ -15,6 +15,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Npm install
+        run: npm run i
+
       - name: Building
         run: npm run build
   
