--- a/.github/workflows/building-action.yml
+++ b/.github/workflows/building-action.yml
@@ -13,10 +13,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
 
       - name: Npm install
-        run: npm run i
+        run: npm run install
 
       - name: Building
         run: npm run build
