--- a/.github/workflows/building-action.yml
+++ b/.github/workflows/building-action.yml
@@ -15,8 +15,8 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Npm install
-        run: npm run install
+      - name: Install dependencies
+        run: npm install
 
       - name: Building
         run: npm run build
