--- a/.github/workflows/building-action.yml
+++ b/.github/workflows/building-action.yml
@@ -9,7 +9,7 @@ on:
       - main
 
 jobs:
-  test-project:
+  build-project:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -17,9 +17,6 @@ jobs:
 
       - name: Install dependencies
         run: npm install
-
-      - name: Formatting
-        run: npm run format
 
       - name: Building
         run: npm run build
